add homework6 oop